--- a/www/index.html
+++ b/www/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>TemplateOne</title>
+  <title>webpackTemplate</title>
   <style>
 
   </style>
 </head>
 <body>
-<button id="btn">更新dom</button>
 <div id="container">
 </div>
 <script src="/xuni/bundle.js"></script>
